# docs/swagger.json
@@ -6,6 +6,49 @@
     },
     "basePath": "/api",
     "paths": {
+        "/get_tracking": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Gets the status of tracking numbers",
+                "operationId": "get-tracking-numbers",
+                "parameters": [
+                    {
+                        "description": "Tracking numbers",
+                        "name": "getTrackingInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.getTracking"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.trackingInfo"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.trackingInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.trackingInfo"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "consumes": [
@@ -105,7 +148,7 @@
                 "parameters": [
                     {
                         "description": "Tracking Info",
-                        "name": "registrationInfo",
+                        "name": "startTrackingInfo",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -137,6 +180,20 @@
         }
     },
     "definitions": {
+        "api.getTracking": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "tracking_numbers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "api.loginInfo": {
             "type": "object",
             "properties": {
@@ -203,6 +260,17 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "api.trackingInfo": {
+            "type": "object",
+            "properties": {
+                "tracking_info": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
